Fixed the IE7 layout bug for person-excerpts and added the .container-fluid selector for the IE7 fix on bootstrap-ie7.css

--- a/jekyll/styles/_shared.scss
+++ b/jekyll/styles/_shared.scss
@@ -93,6 +93,7 @@
   
   img.portrait {border-radius: 10px 10px 0px 0px;}
   
+  .row-caption {margin: 0px;}
   .caption {
     border-radius: 0px 0px 10px 10px;
     background: #201d18;
